
[workspace]
resolver = "2"
members = [
    "balius",
    "examples/basic",
    # "examples/sundae-stop-loss-strategy",
    # "examples/ticket-vending-machine",
    "examples/minter/offchain",
    "examples/wallet/offchain",
    "examples/asteria-admin",
    "examples/telchar",
    "examples/comprehensive",
    "balius-sdk",
    "balius-runtime",
    "balius-macros",
    "baliusd",
]

[workspace.metadata.release]
cargo-dist-build = ["baliusd"]
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
