[package]
name = "balius-macros"
version = "0.4.0"
edition = "2021"

description = "SDK for building Headless dApps on UTxO-based blockchains"
license = "Apache-2.0"
repository = "https://github.com/txpipe/balius"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full"] }
