[package]
name = "balius-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.64"
wasmtime = { version = "23.0.1" }
warp = { version = "0.3.7" }
flate2 = "1.0.33"
tar = "0.4.41"
serde = "1.0.210"
serde_json = "1.0.128"
pallas = "0.30.2"
redb = "2.1.3"
tokio = "1.40.0"
tracing = "0.1.40"
hex = "0.4.3"
itertools = "0.13.0"
async-trait = "0.1.83"
utxorpc = { version = "0.7.1" }
tokio-util = "0.7.12"
prost = "0.12.6"

[dev-dependencies]
tokio = "1.40.0"
