[package]
name = "balius-runtime"
version = "0.3.0"
edition = "2021"

description = "Runtime for run Headless dApps on UTxO-based blockchains"
license = "Apache-2.0"
repository = "https://github.com/txpipe/balius"

[dependencies]
thiserror = "2.0.11"
wasmtime = { version = "28.0.1" }
warp = { version = "0.3.7" }
flate2 = "1.0.33"
tar = "0.4.41"
serde = "1.0.210"
serde_json = "1.0.128"
pallas = "0.32.0"
redb = "2.1.3"
tokio = "1.40.0"
tracing = "0.1.40"
hex = "0.4.3"
itertools = "0.14.0"
async-trait = "0.1.83"
utxorpc = { version = "0.10.0" }
# utxorpc = { path = "../../../utxorpc/rust-sdk" }
tokio-util = "0.7.12"
prost = "0.13"

[dev-dependencies]
tokio = "1.40.0"
wat = "1"
wit-component = "0.225"
