[package]
name = "balius-runtime"
version = "0.3.4"
edition = "2021"

description = "Runtime for run Headless dApps on UTxO-based blockchains"
license = "Apache-2.0"
repository = "https://github.com/txpipe/balius"

[dependencies]
chrono = "0.4.41"
thiserror = "2.0.11"
wasmtime = { version = "28.0.1" }
warp = { version = "0.3.7" }
flate2 = "1.0.33"
tar = "0.4.41"
serde = "1.0.210"
serde_json = "1.0.128"
pallas = "0.32.0"
redb = "2.1.3"
tokio = "1.40.0"
tracing = "0.1.40"
hex = "0.4.3"
itertools = "0.14.0"
async-trait = "0.1.83"
utxorpc = { version = "0.10.0" }
# utxorpc = { path = "../../../utxorpc/rust-sdk" }
tokio-util = "0.7.12"
prost = "0.13"
object_store = { version = "0.12.0", features = ["fs"] }
url = "2.5.4"
reqwest = "0.12.15"
opentelemetry = { version = "0.29.1", features = ["metrics", "trace"] }

[dev-dependencies]
tokio = "1.40.0"
wat = "1"
wit-component = "0.225"

[features]
http = ["object_store/http"]
aws = ["object_store/aws"]
gcp = ["object_store/gcp"]
azure = ["object_store/azure"]
