[package]
name = "balius-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
balius-macros = { version = "0.1.0", path = "../balius-macros" }
hex = "0.4.3"
pallas-addresses = { version = "0.30.2", git = "https://github.com/txpipe/pallas.git" }
pallas-codec = { version = "0.30.2", git = "https://github.com/txpipe/pallas.git" }
pallas-crypto = { version = "0.30.2", git = "https://github.com/txpipe/pallas.git" }
pallas-primitives = { version = "0.30.2", git = "https://github.com/txpipe/pallas.git" }
pallas-traverse = { version = "0.30.2", git = "https://github.com/txpipe/pallas.git" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
thiserror = "1.0.64"
wit-bindgen = "0.33.0"
