[package]
name = "balius-sdk"
version = "0.2.0"
edition = "2021"

[dependencies]
utxorpc-spec = { version = "0.12.0", features = ["ledgers"], default-features = false }
balius-macros = { path = "../balius-macros" }
hex = "0.4.3"
pallas-addresses = { version = "0.31.0" }
pallas-codec = { version = "0.31.0" }
pallas-crypto = { version = "0.31.0" }
pallas-primitives = { version = "0.31.0" }
pallas-traverse = { version = "0.31.0" }
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
thiserror = "1.0.64"
wit-bindgen = "0.33.0"
