[package]
name = "balius-sdk"
version = "0.3.0"
edition = "2021"

description = "SDK for building Headless dApps on UTxO-based blockchains"
license = "Apache-2.0"
repository = "https://github.com/txpipe/balius"

[dependencies]
utxorpc-spec = { version = "0.16.0", features = ["ledgers"], default-features = false }
balius-macros = { path = "../balius-macros" }
hex = "0.4.3"
pallas-addresses = { version = "0.32.0" }
pallas-codec = { version = "0.32.0" }
pallas-crypto = { version = "0.32.0" }
pallas-primitives = { version = "0.32.0" }
pallas-traverse = { version = "0.32.0" }
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
thiserror = "2.0.11"
wit-bindgen = "0.39.0"
