[package]
name = "balius"
version = "0.2.0"
edition = "2021"

description = "SDK for building Headless dApps on UTxO-based blockchains"
authors = ["TxPipe <hello@txpipe.io>"]
license = "Apache-2.0"
repository = "https://github.com/txpipe/balius"
documentation = "https://docs.rs/balius"
readme = "README.md"
keywords = ["blockchain", "dapp", "sdk", "utxo", "cardano"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
serde_json = "1.0.128"
