[package]
name = "balius"
version = "0.3.0"
edition = "2021"

description = "CLI for building Headless dApps on UTxO-based blockchains"
authors = ["TxPipe <hello@txpipe.io>"]
license = "Apache-2.0"
repository = "https://github.com/txpipe/balius"
documentation = "https://docs.rs/balius"
readme = "README.md"
keywords = ["blockchain", "dapp", "sdk", "utxo", "cardano"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balius-runtime = { version = "0.3.0", path = "../balius-runtime" }
miette = { version = "7.2.0", features = ["fancy"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.19", features = ["derive", "env"] }
serde_json = "1.0.128"
fs_extra = "1.3.0"
