[package]
name = "baliusd"
version = "0.3.4"
edition = "2021"
publish = false

description = "A standalone Balius runtime that can be used as a daemon"
license = "Apache-2.0"
repository = "https://github.com/txpipe/balius"

exclude = [
  "bin",
  "example-*",
]

[dependencies]
balius-runtime = { version = "0.3.4", path = "../balius-runtime", features = ["postgres"] }
gasket = { version = "0.8.0", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "signal"] }
tokio-macros = "2.4.0"
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
config = { version = "0.13.3", default-features = false, features = ["toml", "json"] }

[package.metadata.release]
release = false
