[package]
name = "asteria-tracker"
version = "0.0.1"
edition = "2021"

[dependencies]
balius-sdk = "0.5.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
utxorpc-spec = "0.16.0"
hex = "0.4.3"
url = "2.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false
