[package]
name = "my-bod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balius-sdk = { path = "../../balius-sdk" }
pallas-primitives = "0.31.0"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false
