[package]
name = "catalyst-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balius = { path = "../../balius" }
pallas-primitives = "0.30.0"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
