[package]
name = "comprehensive"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
balius-sdk = { path = "../../balius-sdk" }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
serde_with = "3.12.0"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false
