[package]
name = "minter"
version = "0.1.0"
edition = "2021"

[dependencies]
balius = { path = "../../../balius" }
pallas-primitives = { path = "../../../../pallas/pallas-primitives" }
pallas-txbuilder = { path = "../../../../pallas/pallas-txbuilder" }
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.128"
