[package]
name = "minter"
version = "0.1.0"
edition = "2021"

[dependencies]
balius-sdk = { path = "../../../balius-sdk" }
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.128"
pallas-traverse = "0.31.0"
pallas-codec = "0.31.0"
pallas-primitives = "0.31.0"

[package.metadata.release]
release = false
